--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^6.0.6",
-    "multer": "^1.4.3"
+    "mongoose": "^6.0.6"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
